--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ Pillow = "^6.2"
 [tool.poetry.dev-dependencies]
 pylint = "^2.4"
 mypy = "^0.730.0"
+pyinstaller = "^3.5"
+pywin32-ctypes = "^0.2.0"
+pefile = "^2019.4"
 
 [build-system]
 requires = ["poetry>=0.12"]
